--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<a href = "form.html">Link</a>
+<a href = "https://tylerfans.github.io/mypage_bootstrap.HTML">Link to Bootstrap</a>
+<a href = "https://tylerfans.github.io/form.html">Link to Form</a>
+<a href = "https://tylerfans.github.io/mypage.html">Link to About Me</a>
 </body>
 </html>
