--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <a href = "https://tylerfans.github.io/mypage_bootstrap.HTML">Link to Bootstrap</a>
 <a href = "https://tylerfans.github.io/form.html">Link to Form</a>
 <a href = "https://tylerfans.github.io/mypage.html">Link to About Me</a>
+<a href = "https://tylerfans.github.io/tic-tac-toe.html">Link To Tic-Tac-Toe</a>
 </body>
 </html>
