--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 <li>Click the line above to be redirected to my GitHub that has some of the code projects that I have written in previous classes. I try to keep it updated. </li>
                 <li>I recreated the original Orgeon Trail game. This was one of the first computer games ever developed. </li>
                 <li>I created a dynamic website using Google Maps API that populated specific resuraunts on the map with very detailed pop-up windows. Check it out <a href = "http://cometoco.herokuapp.com/">here.</a> </li>
-                <li>I created a professional facing website for the Boulder Valley School District using custom wordpress plugins and Google Sheets API, and embedded graphs. You can check it out <a href = "https://cofoodjustice.org/bvsd-external-website-home-998/">here.</a></li>
+                <li>I created a professional facing website for the Boulder Valley School District using custom wordpress plugins and Google Sheets API, and embedded graphs. You can check it out <a href = "https://cofoodjustice.org/bvsd-home/">here.</a></li>
                 <li> I recenty analyzed a corpus of 451 books using the R language. I was working with datasets consisting of several million lines.</li>
                 <li> Check out a Tic-Tac-Toe game that I made using HTML and JS. Check it out <a href = "tic-tac-toe.html">here.</a></li>
                 <li>Developed an application called ShredSafe, it is a life alert for snowboarders and skiiers. Check out the prototype that I made <a href = "https://www.figma.com/proto/f4vkwg8ZSufFm6eJrZGmzG/Shred-Safe-Prototype-1-Copy?node-id=2%3A3&scaling=scale-down">here.</a></li>
