--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
               <h4>Computer Science Degree Through A&S</h4>
               <h5>2018 - Current</h5>
               <p><em> University of Colorado at Boulder, Boulder, CO </em></p>
-              <p> I am currently finishing my last couple semesters at CU Boulder. I am considering going to grad school after graduation for either cyber security, database administration, or AI development. I am also a recipient of the Presidential Scholarshi which is awarded to the top 1-3% of out of state students. I have also been on the Dean's list the past few semesters and have a GPA of 3.6.</p>
+              <p> I am currently finishing my last couple semesters at CU Boulder. I am considering going to grad school after graduation for either cyber security, database administration, or AI development. I am also a recipient of the Presidential Scholarship which is awarded to the top 1-3% of out-of-state students. I have also been on the Dean's list the past few semesters and have a GPA of 3.6.</p>
             </div>
 
             <h3 class="resume-title">Projects</h3>
@@ -314,7 +314,7 @@
               <h4>Presidential Scholarship Recipient</h4>
               <p><em>University of Colorado Boulder</em></p>
               <ul>
-                <li> This scholarship is awarded to the top 1-3% of out of state students. </li>
+                <li> This scholarship is awarded to the top 1-3% of out-of-state students. </li>
               </ul>
               <h4>3.62 GPA</h4>
               <h4>Dean's List Recipient</h4>
